--- a/portfolio.html
+++ b/portfolio.html
@@ -239,6 +239,18 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-newsletter">
+                <h4 class="footer-header">Zapisz się do newslettera</h4>
+                <form name="newsletter" autocomplete="on" class="form-newsletter">
+                  <input type="email" name="email" placeholder="E-mail" class="input-newsletter" />
+                  <button type="submit" class="btn-newsletter">
+                    Zapisz się
+                    <svg width="24" height="24" class="icon-btn-newsletter">
+                      <use xlink:href="./images/icons.svg#send"></use>
+                    </svg>
+                  </button>
+                </form>
+              </div>
         </div>
     </footer>
 
